# fljuga-handahofi

./: .gitattributes  .gitignore  .licensure.yml  .tool-versions  Cargo.toml  HEADER  README.md  build.rs  rust-toolchain
.cargo/: config.toml
crates/dialect-amdgpu/: Cargo.toml  README.md
crates/dialect-amdgpu/src/: lib.rs
crates/dialect-arm-neon/: Cargo.toml  README.md
crates/dialect-arm-neon/src/: lib.rs
crates/dialect-arm-sme/: Cargo.toml  README.md
crates/dialect-arm-sme/src/: lib.rs
crates/dialect-arm-sve/: Cargo.toml  README.md
crates/dialect-arm-sve/src/: lib.rs
crates/dialect-emit-c/: Cargo.toml  README.md
crates/dialect-emit-c/src/: lib.rs
crates/dialect-intel-amx/: Cargo.toml  README.md
crates/dialect-intel-amx/src/: lib.rs
crates/dialect-intel-xe/: Cargo.toml  README.md
crates/dialect-intel-xe/src/: lib.rs
crates/dialect-mpi/: Cargo.toml  README.md
crates/dialect-mpi/src/: lib.rs
crates/dialect-nvgpu/: Cargo.toml  README.md
crates/dialect-nvgpu/src/: lib.rs
crates/dialect-nvvm/: Cargo.toml  README.md
crates/dialect-nvvm/src/: lib.rs
crates/dialect-omp/: Cargo.toml  README.md
crates/dialect-omp/src/: lib.rs
crates/dialect-openacc/: Cargo.toml  README.md
crates/dialect-openacc/src/: lib.rs
crates/dialect-riscv-vcix/: Cargo.toml  README.md
crates/dialect-riscv-vcix/src/: lib.rs
crates/dialect-rocdl/: Cargo.toml  README.md
crates/dialect-rocdl/src/: lib.rs
crates/dialect-spirv/: Cargo.toml  README.md
crates/dialect-spirv/src/: lib.rs
crates/dialect-x86-vector/: Cargo.toml  README.md
crates/dialect-x86-vector/src/: lib.rs
crates/laera-fljuga/: Cargo.toml  README.md
crates/laera-fljuga/src/: lib.rs
crates/laera-hekla/: Cargo.toml  README.md
crates/laera-hekla/src/: lib.rs
crates/mlir-codegen/: Cargo.toml  README.md
crates/mlir-codegen/src/: client.rs  lib.rs  main.rs  tablegen.rs
crates/mlir-codegen/src/testdata/: should_download_tablegen_files.golden
crates/tablegen/: Cargo.toml  README.md
crates/tablegen/src/: grammar.rs  lib.rs
crates/tablegen/src/grammar/: expressions.rs  tokens.rs
crates/tablegen/src/grammar/expressions/: class_def.rs  let_expression.rs  preprocessor.rs  ranges.rs  record_def.rs  values.rs
crates/tablegen/src/grammar/expressions/class_def/: body.rs  template_arg.rs
crates/tablegen/src/grammar/expressions/preprocessor/: chunk.rs  def.rs
crates/tablegen/src/grammar/tokens/: bang_operator.rs  comments.rs  digits.rs  helpers.rs  identifier.rs  internal.rs  preprocessor_directive.rs  ranges.rs  strings.rs  type_name.rs  variable.rs
doc/: README.md
src/: lib.rs  targets.rs
src/targets/: affine.rs  arith.rs  async_dialect.rs  bufferization.rs  cf.rs  complex.rs  dlti.rs  func.rs  gpu.rs  index.rs  irdl.rs  linalg.rs  llvm.rs  math.rs  memref.rs  mesh.rs  ml_program.rs  pdl.rs  polynomial.rs  ptr.rs  quant.rs  scf.rs  shape.rs  tensor.rs  tensor_operator_set.rs  tensor_sparse.rs  ub.rs
