[package]
name = "fljuga-handahofi-dialect-arm-neon"
description = "fljúga handahófi arm neon dialect support"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
winnow.workspace = true

[lints]
workspace = true