[package]
name = "fljuga-handahofi-dialect-arm-sme"
description = "fljúga handahófi arm sme floating-point dialect support"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
winnow.workspace = true

[lints]
workspace = true