[package]
name = "fljuga-handahofi-dialect-arm-sve"
description = "fljúga handahófi arm sve dialect support"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
winnow.workspace = true

[lints]
workspace = true