[package]
name = "fljuga-handahofi-dialect-rocdl"
description = "fljúga handahófi AMD rocdl dialect support"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
winnow.workspace = true

[lints]
workspace = true