[package]
name = "fljuga-handahofi-laera-fljuga"
description = "læra að fljúga is fljúga handahófi machine learning framework"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
winnow.workspace = true

[lints]
workspace = true
