[package]
name = "fljuga-handahofi-laera-hekla"
description = "læra að hekla is fljúga handahófi distributed computing framework"
version = "0.1.0"
authors.workspace = true
documentation.workspace = true
edition.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
winnow.workspace = true

[lints]
workspace = true
